--- a/BookReadingEvents/Views/Shared/_LayoutLoginSignup.cshtml
+++ b/BookReadingEvents/Views/Shared/_LayoutLoginSignup.cshtml
@@ -22,7 +22,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Login", "Index")</li>
                     <li>@Html.ActionLink("Sign Up", "SignUp")</li>
-                    <li><a href="https://http://helpdesk.nagarro.com/kayako/">Customer-Support</a></li>
+                    <li><a href="https://helpdesk.nagarro.com/kayako/">Customer-Support</a></li>
 
                 </ul>
             </div>
